--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
     
 <h1> Interstellar</h1>
 
-<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem, voluptate?</p>
+<p> </p>
 
 <img src="/istockphoto-615422436-612x612.jpg" >
 <button>See More Details</button>
 </body>
 </html>
+
+<p>Interstellar (2014) follows Cooper, a former NASA pilot, who joins a mission to find a new home for humanity as Earth faces ecological collapse. 
+    Traveling through a wormhole near Saturn, the team explores distant planets, grapples with time dilation, and faces emotional and scientific challenges.
+    At its core, the film explores love, sacrifice, and the power of human resilience—blending real physics with deeply personal stakes.</p>
