--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
 </head>
 <body>
     
-<h1> Interstellar</h1>
-
-<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem, voluptate?</p>
-
-<img src="/istockphoto-615422436-612x612.jpg" >
+<h1>
+Interstellar</h1>
+</h1>
+<img src= "interstellar.jpg" alt="Interstellar Movie Poster" width="300" height="450">
 <button>See More Details</button>
 </body>
 </html>
