--- a/index.html
+++ b/index.html
@@ -5,13 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    
-<h1> Interstellar</h1>
-
-<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem, voluptate?</p>
-
-<img src="/istockphoto-615422436-612x612.jpg" >
-<button>See More Details</button>
+<body> 
+<button type="button">Click Me!</button>
 </body>
 </html>
