added css mainly

--- a/index.html
+++ b/index.html
@@ -4,16 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<button type="button">Click Me!</button>   
-<h1>
-Interstellar</h1>
+ 
+<div class="HeadDiv">
+    <h1>
+Interstellar
 </h1>
-<img src= "interstellar.jpg" alt="Interstellar Movie Poster" width="300" height="450">
-<p>Interstellar (2014) follows Cooper, a former NASA pilot, who joins a mission to find a new home for humanity as Earth faces ecological collapse. 
+</div>
+
+<div class="bodyhunmein">
+    <div class="bodySection">
+    <img src= "/interstellar.jpg" alt="Interstellar Movie Poster">
+<p class="paraBody">Interstellar (2014) follows Cooper, a former NASA pilot, who joins a mission to find a new home for humanity as Earth faces ecological collapse. 
         Traveling through a wormhole near Saturn, the team explores distant planets, grapples with time dilation, and faces emotional and scientific challenges.
-        At its core, the film explores love, sacrifice, and the power of human resilience—blending real physics with deeply personal stakes.</p>
+        At its core, the film explores love, sacrifice, and the power of human resilience—blending real physics with deeply personal stakes.</p></div>
+
+</div>
+<div class="btn"><a href="https://www.imdb.com/title/tt0816692/"><button type="button">Click Me!</button></a> </div>
+ 
+
+
 
         
 </body>
